--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": ["warn"]
+    "prettier/prettier": ["warn"],
+    "react/prop-types": "off"
   },
   "ignorePatterns": ["dist", "node_modules"]
 }
