--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-async-router",
-  "version": "1.0.0",
+  "version": "1.0.0-pre-2",
   "license": "MIT",
   "main": "index.js",
   "module": "index.js",
@@ -21,29 +21,29 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.4.0-pre.12"
+    "react-router-dom": "6.4.0-pre.14"
   },
   "devDependencies": {
-    "@types/glob": "7.2.0",
-    "@types/node": "18.0.6",
-    "@types/react": "18.0.15",
+    "@types/glob": "8.0.0",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "5.30.7",
-    "@typescript-eslint/parser": "5.30.7",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "chokidar": "3.5.3",
-    "esbuild": "0.14.51",
+    "esbuild": "0.15.6",
     "esbuild-plugin-css-in-js": "0.0.1",
-    "eslint": "8.20.0",
+    "eslint": "8.23.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-react": "7.31.1",
     "prettier": "2.7.1",
-    "typescript": "4.7.4",
-    "vite": "3.0.4"
+    "typescript": "4.8.2",
+    "vite": "3.0.9"
   }
 }
